# customer-support-chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  PRODUCTION_CHECKLIST.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
.github/workflows/: ci-cd.yml  data-pipeline.yml  docs.yml  ml-pipeline.yml
alembic/: env.py
configs/: config.yaml
customer_support_chatbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/processed/: intent_mapping.json  test_data.csv  training_data.csv
data/raw/: sample_conversations.csv
docker/: Dockerfile
docs/: README.md  index.html
metrics/: evaluation_metrics.json  intent_metrics.json
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: chatbot.json
nginx/: nginx.conf
notebooks/: data_exploration.ipynb
scripts/: create_sample_dataset.py  download_dataset.py  init_db.py  seed_db.py  train_model.py  validate_data.py
scripts/dataops/: data_quality_checks.py  ingest_data.py  process_data.py
scripts/mlops/: evaluate_model.py  fine_tune_model.py  generate_model_report.py  train_model.py  validate_model.py
src/: __init__.py
src/analytics/: __init__.py  dashboard.py  metrics.py
src/api/: __init__.py  main.py  schemas.py
src/chatbot/: __init__.py  engine.py  entity_extractor.py  intent_classifier.py  response_generator.py
src/database/: __init__.py  models.py
src/nlp/: __init__.py  entity_extractor.py  preprocessor.py
tests/: test_api.py  test_chatbot.py  test_nlp.py
