# Configuration moderne Python selon PEP 518/621
# Projet professionnel de chatbot de support client

[build-system]
# Système de build moderne utilisant setuptools
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Métadonnées du projet selon PEP 621
name = "customer-support-chatbot"
version = "1.0.0"
description = "Production-ready AI chatbot for customer support with NLP and ML capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Abder Rrazzak", email = "abder.rrazzak@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Customer Service",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"

# Dépendances principales du projet
dependencies = [
    # Framework web et API
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=11.0.0",
    "pydantic>=2.0.0",
    
    # NLP et Machine Learning
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "spacy>=3.6.0",
    "nltk>=3.8.0",
    "scikit-learn>=1.3.0",
    
    # Base de données et stockage
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "redis>=4.5.0",
    "chromadb>=0.4.0",  # Vector database pour embeddings
    
    # Utilitaires
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",  # Interface CLI colorée
    
    # Monitoring et logging
    "structlog>=23.0.0",
    "prometheus-client>=0.17.0",
    
    # Sécurité et authentification
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]

# Dépendances optionnelles groupées par usage
[project.optional-dependencies]
# Outils de développement
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",  # Client HTTP pour tests API
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pre-commit>=3.0.0",
]

# Outils de documentation
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "pdoc>=13.0.0",
]

# Outils de visualisation et notebooks
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

# Outils MLOps et expérimentation
mlops = [
    "mlflow>=2.0.0",
    "wandb>=0.15.0",
    "dvc>=3.0.0",
    "hydra-core>=1.3.0",
    "optuna>=3.0.0",  # Optimisation hyperparamètres
]

# Outils de production
prod = [
    "gunicorn>=21.0.0",
    "celery>=5.3.0",  # Tâches asynchrones
    "flower>=2.0.0",  # Monitoring Celery
    "sentry-sdk[fastapi]>=1.28.0",  # Error tracking
]

# Points d'entrée CLI pour installer des commandes globales
[project.scripts]
chatbot-train = "src.chatbot.train:main"
chatbot-serve = "src.api.main:main"
chatbot-cli = "src.chatbot.cli:main"

# URLs du projet
[project.urls]
Homepage = "https://github.com/abder-rrazzak/customer-support-chatbot"
Documentation = "https://abder-rrazzak.github.io/customer-support-chatbot/"
Repository = "https://github.com/abder-rrazzak/customer-support-chatbot.git"
Issues = "https://github.com/abder-rrazzak/customer-support-chatbot/issues"

# Configuration de setuptools pour la découverte des packages
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Configuration Black (formatage automatique du code)
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# Configuration isort (tri automatique des imports)
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
known_third_party = [
    "fastapi", "pydantic", "sqlalchemy", "transformers", 
    "torch", "spacy", "nltk", "redis", "celery"
]

# Configuration pytest (framework de tests)
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "-p", "no:warnings",  # Supprimer les warnings verbeux
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"  # Support automatique pour les tests async

# Configuration MyPy (vérification de types)
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ignorer les imports sans stubs de types
[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "spacy.*",
    "nltk.*",
    "chromadb.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

# Configuration Bandit (analyse de sécurité)
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "migrations"]
skips = ["B101", "B601"]  # Ignorer les assert et shell=True dans certains cas

# Configuration de couverture de code
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/migrations/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]